# SPIRVSmith

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  README.md  amber.py  amber_client.py  amber_server.py  cog.toml  config.py  datadog_conf.yaml  fuzzer.py  inspect_f.py  inspect_shaders.py  interestingness.py  interestingness_segfault.py  langspec.py  main.py  monitor.py  patched_dataclass.py  pyproject.toml  reducer_client.py  run.py  run.sh  run_local.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  python-package.yml
config/: defaults.yaml
infra/: .auto.tfvars  CHANGELOG.md  main.tf  terraform.tfvars  variables.tf  versions.tf
langspec/: enums.py  limits.py
langspec/opcodes/: __init__.py  arithmetic.py  bitwise.py  constants.py  context.py  conversions.py  extension.py  function.py  logic.py  memory.py  misc.py
langspec/opcodes/types/: abstract_types.py  concrete_types.py
scripts/: clear_out.sh  get-amber.sh  get-spirv-tools.sh  get_amber.sh  interestingness.sh  interestingness_segfault.sh  run.sh  run_cloud.sh
src/: __init__.py  amber_generator.py  amber_server.py  annotations.py  constants.py  context.py  enums.py  execution_platform.py  extension.py  function.py  fuzzing_client.py  fuzzing_server.py  memory.py  misc.py  monitor.py  optimiser_fuzzer.py  patched_dataclass.py  predicates.py  recondition.py  shader_brokerage.py  shader_parser.py  shader_utils.py  utils.py
src/operators/: __init__.py  arithmetic.py  bitwise.py  composite.py  conversions.py  logic.py
src/operators/arithmetic/: __init__.py  glsl.py  linear_algebra.py  scalar_arithmetic.py
src/operators/memory/: __init__.py  memory_access.py  variable.py
src/types/: abstract_types.py  concrete_types.py
tests/: __init__.py  test_arithmetic.py  test_composite.py  test_constants.py  test_context.py  test_memory.py  test_parser.py  test_recondition.py  test_types.py
utils/: inspect_f.py
