[tool.poetry]
name = "spirvsmith"
version = "0.1.0"
description = ""
authors = ["Rayan Hatout <rayan.hatout@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
shortuuid = "^1.0.8"
hydra-core = "^1.1.1"
ulid-py = "^1.1"
pytest = "^7.1.1"
datadog = "^0.44.0"
daiquiri = "^3.0.1"
ddtrace = "^1.0.1"
GitPython = "^3.1.27"
pandas = "^1.4.2"
pydantic = "^1.9.1"
spirv-enums = "^1.0"
dataclass-wizard = "^0.22.1"
vulkan-platform-py = "^0.4.1"
frozendict = "^2.3.2"
spirvsmith-server-client = "^0.2.0"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
black = {version = "^22.3", allow-prereleases = true}
autoflake = "^1.4"
pytest-flakefinder = "^1.0.0"
pre-commit = "^2.18.1"
mypy = "^0.950"
coverage = "^6.3.2"
flake8 = "^4.0.1"
tqdm = "^4.64.0"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
